# lien_parallel

./: .gitignore  CMakeLists.txt
include/ien/: parallel.hpp  task_queue.hpp
src/: parallel.cpp  task_queue.cpp
test/: CMakeLists.txt
test/src/: parallel.cpp  parallel_benchmarks.cpp
